# option_tracker

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
src/option_tracker/: __main__.py
src/option_tracker/data/: data_store.sqlite
src/option_tracker/pages/: oic_downloader.py  option_chain.py
src/option_tracker/utils/: .bash_history  abcd.txt  jpm_login.py  pc_utils.py  rclone.conf
